fix white gap with overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* COMMON */
 
 html, body {
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
 
